# nyc_taxrag

./: .env.example  .gitignore  README.md  fallback_prompt.txt  pyproject.toml  requirements-streamlit.txt  requirements.txt  streamlit_app.py
.streamlit/: config.toml
data/analysis/: basic_stats.md
data/processed/chunks/: chunk_stats.json
docs/: chunking.md  rag.md  vectorstore.md
scripts/: generate_basic_stats.py  run_chunking.py  run_ingestion.py  test_rag.py  test_search.py
src/chunking/: __init__.py  chunker.py  html_parser.py
src/chunking/prompts/: __init__.py  examples.py  system_prompt.py
src/chunking/strategies/: __init__.py  base.py  fallback_strategy.py  zchunk_strategy.py
src/config/: settings.py
src/embedding/: __init__.py  embedder.py
src/embedding/providers/: __init__.py  openai_embedder.py
src/fallback/: __init__.py  config.py  handler.py  prompt.py  types.py
src/llm/: __init__.py  client.py
src/llm/providers/: __init__.py  anthropic_client.py  openai_client.py
src/metrics/: evaluator.py
src/rag/: __init__.py  config.py  context.py  pipeline.py  types.py
src/vectorstore/: __init__.py  collection.py  cross_reference.py  hybrid_search.py  qdrant_store.py
tests/unit/: test_rag_pipeline.py
